chore: add custom scrollbar in textarea, css adjustments, some fixes

--- a/src/style/atoms/_customtextarea.scss
+++ b/src/style/atoms/_customtextarea.scss
@@ -1,7 +1,7 @@
 .customTextarea {
   position: relative;
   height: auto;
-  padding: 10px 16px 24px;
+  padding: 10px 16px 72px;
   border-radius: 12px;
   background: #ffffff;
   border: 2px solid #1b1c1e;
@@ -9,19 +9,33 @@
   textarea {
     /* TODO inne wartości */
     width: 100%;
-    height: 130px;
-    min-height: 85px;
-    max-height: 240px;
+    height: 82px;
+    min-height: 60px;
+    max-height: 180px;
 
     font-family: Inter;
     font-size: 16px;
     line-height: 25.6px;
     font-weight: 400;
+    padding-right: 6px;
 
     color: #5b5c5e;
     border: none;
     resize: none;
     outline: none;
+
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(27, 28, 30, 0.52);
+      border-radius: 12px;
+    }
   }
 
   button.add {
